12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2005.mm.dd):
==================================

- Applied patches:
   - #1186314 : iometer-2004.07.30-post.DS1.Ming017CharDevicesForRaw.patch
     by Ming Zhang (Patch that adds support for char devices to support
     raw devices).
   - #1186307 : iometer-2004.07.30-post.DS1.Ming016KStatErrorMessage.patch
     by Ming Zhang (Tiny patch that cleans up an error message that is
     related to the kstat module one can optionally use on Linux).
   - #1186304 : iometer-2004.07.30-post.DS1.Ming015DebugDefine.patch by
     Ming Zhang (Cleanup the _DEBUG define usage in the Makefiles).
   - #1186297 : iometer-2004.07.30-post.DS1.Ming014ExcludeSwapDevices.patch
     by Ming Zhang (Prevents swap devices from showing up under Linux).
   - #1184792 : iometer-2004.07.30-post.Daniel002CodeCleanup.patch by
     Daniel Scheibli (Collective patch that brings different minor
     cleanups to logic and coding style).
   - #1184764 : iometer-2004.07.30-post.Ming013BlkGetSize64.patch by
     Ming Zhang (Tiny patch that corrects the BLKGETSIZE64 prototype
     definition).
   - #1184759 : iometer-2004.07.30-post.Ming012CpuAffinitityOffByDefault.patch
     by Ming Zhang (Tiny patch that switches off the CPU affinity
     support by default).
   - #1184758 : iometer-2004.07.30-post.Ming011SolarisWarnings.patch
     by Ming Zhang (Small patch that gets rid of some compiler warnings
     on Solaris).
   - #1184741 : iometer-2004.07.30-post.Henry002Ia64LinuxAndDdkCleanup.patch
     by Henryx W. Tieman (Does some cleanup on the Windows/IA64 build
     using the DDK and brings basic support for a Linux/IA64 port).
   - #1184731 : iometer-2004.07.30-post.Ming010CpuAffinity.patch by